--- a/Müzik_Öneri/muzik_oneri_api.ipynb
+++ b/Müzik_Öneri/muzik_oneri_api.ipynb
@@ -38,7 +38,7 @@
     "                             QPushButton, QTextEdit, QVBoxLayout)\n",
     "\n",
     "# --- Gemini API Yapılandırması ---\n",
-    "API_KEY = \"AIzaSyDco5g5D8biwJuJYG94ZNWrRb16ukgLYm4\"\n",
+    "API_KEY = \"AI\"\n",
     "\n",
     "try:\n",
     "    genai.configure(api_key=API_KEY)\n",
